# cohoma_msgs

./: CMakeLists.txt  package.xml
msg/: MissionContext.msg  MissionPlan.msg  StrategicPoint.msg  WayPoint.msg
srv/: CoverageArea.srv  PullMission.srv  PushMission.srv
