<?xml version="1.0"?>
<package format="2">
  <name>cohoma_msgs</name>
  <version>0.0.0</version>
  <description>The cohoma_msgs package</description>

  <maintainer email="julesberhault@gmail.com">Jules Berhault</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>

</package>
